# OxideXR

./: Cargo.toml  README.md  layer.json
common/: Cargo.toml
common/src/: application_bindings.rs  bindings_config.rs  interaction_profiles.rs  lib.rs  serial.rs  xrapplication_info.rs
gui/: Cargo.toml
gui/src/: main.rs  main2.rs  raw_ref.rs
layer/: Cargo.toml
layer/src/: god_actions.rs  gui.rs  lib.rs  loader_interfaces.rs  path.rs  util.rs  validation.rs  wrappers.rs
layer/src/injections/: actions.rs  bindings.rs  instance.rs  mod.rs  session.rs  space.rs
layer/src/wrappers/: mod.rs  session.rs  space.rs
src/: lib.rs  loader_interfaces.rs  mixin.rs  serial.rs  util.rs  wrappers.rs  xr_handle_types.rs  xr_meta_types.rs
src/injections/: actions.rs  bindings.rs
src/mixin/: actions.rs  bindings.rs  mod.rs
src/serial/: actions.rs  bindings.rs  mod.rs
xrconfig/: applications.json
