[package]
name = "openxr-bindings-customizer"
version = "0.1.0"
authors = ["sorenon <sorenonandstuffs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
openxr-sys = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8", features = ["v4"] }
dashmap = "4.0"