[package]
name = "oxidexr-layer"
version = "0.0.1"
authors = ["sorenon <sorenonandstuffs@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
openxr-sys = "0.9"
dashmap = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
iced = { git = "https://github.com/Sorenon/iced", tag = "0.3.0-any_thread" }
common = { path = "../common" }