[package]
name = "oxidexr-layer"
version = "0.0.1"
authors = ["sorenon <sorenonandstuffs@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
openxr = {  git = "https://github.com/Sorenon/openxrs", default-features = false, features = ["layer"] }
dashmap = "4.0"
common = { path = "../common" }