[package]
name = "oxidexr-layer"
version = "0.0.1"
authors = ["sorenon <sorenonandstuffs@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
openxr = { git = "https://github.com/Sorenon/openxrs", default-features = false, features = ["layer"] }
dashmap = "4.0"
once_cell = "1.8"
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
vscode_dbg = []